2003-09-19  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* decl.c (cxx_scope_descriptor): Fix thinko.
	(struct cp_binding_level): Adjust type of binding_depth field. 

2003-09-18  Danny Smith  <dannysmith@users.sourceforge.net>

	PR c++/12320
	* call.c (type_passed_as): Check for incomplete type.
	(convert_for_arg_passing): Likewise.

2003-09-18  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/9848
	* optimize.c (maybe_clone_body): Don't set MARK_USED on parameters
	here.
	* semantics.c (expand_body): Set it here on the remaining clones.

2003-09-18  Roger Sayle  <roger@eyesopen.com>

	* lex.c (init_operators): Remove operator_name_info for FFS_EXPR.
	* class.c (instantiate_type): Remove FFS_EXPR case.

2003-09-18  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>

	* ChangeLog: Fix recent commit.

2003-09-18  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>

	* ChangeLog: Add PR number to patch for PR c++/12316.

2003-09-18  Gabriel Dos Reis <gdr@integrable-solutions.net>

	* error.c (dump_type): Simplify.  Use pp_type_specifier_seq for
	"C" types. 
	* cxx-pretty-print.c (pp_cxx_type_specifier_seq): Fix thinko.

2003-09-17  Richard Henderson  <rth@redhat.com>

	* semantics.c (expand_body): Don't save/restore input_location.

2003-09-17  Mark Mitchell  <mark@codesourcery.com>

	PR c++/12266
	* cp-tree.h (tsubst_flags_t): Add tf_conv.
	* class.c (standard_conversion): Pass tf_conv to
	instantiate_type.
	(resolve_address_of_overloaded_function): Do not call mark_used
	when just checking conversions.

	PR debug/12066
	* cp-lang.c (LANG_HOOKS_BUILTIN_TYPE_DECLS): Define.
	* cp-tree.h (cxx_builtin_type_decls): Declare.
	* decl.c (builtin_type_decls): New variables.
	(cxx_builtin_type_decls): New function.
	(record_builtin_type): Add to builtin_type_decls.

2003-09-17  Richard Henderson  <rth@redhat.com>

	PR c++/12316
        * semantics.c (expand_or_defer_fn): Inc/dec function_depth.

2003-09-16  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
